--- a/src/components/Discovery/AggregatesDisplay/aggregateDisplay.module.css
+++ b/src/components/Discovery/AggregatesDisplay/aggregateDisplay.module.css
@@ -57,7 +57,8 @@
 .omittedResults {
   flex: 1;
   overflow-y: auto;
-  background-color: #f7f7f7;
+  background-color: var(--background-color-3);
+  color: var(--text-color-primary);
   box-sizing: border-box;
   position: relative;
   border-radius: 2px;
@@ -72,7 +73,7 @@
   display: block;
   width: 100%;
   height: 4vh;
-  background-color: #08242c;
+  background-color: var(--background-nav-and-headers-background-color);
   color: var(--text-color-on-darkbg);
   text-align: center;
   font-weight: bold;
@@ -96,7 +97,7 @@
 .chiSquaredResults div,
 .omittedResults div {
   padding: 5px 0;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid var(--border-color-secondary);
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
@@ -108,7 +109,7 @@
 
 .chiSquaredResults div strong,
 .omittedResults div strong {
-  color: #08242c;
+  color: var(--text-color-dark);
 }
 
 .matrix {
@@ -129,13 +130,13 @@
 }
 
 .matrixHeader {
-  background-color: #08242c;
+  background-color: var(--background-nav-and-headers-background-color);
   color: var(--text-color-on-darkbg);
-  border: 1px solid #08242c;
+  border: 1px solid var(--background-nav-and-headers-background-color);
 }
 
 .matrixCell.diagonal {
-  background-color: #08242c;
+  background-color: var(--background-nav-and-headers-background-color);
   color: var(--text-color-on-darkbg);
 }
 
@@ -144,7 +145,7 @@
 }
 
 .matrixCell.diagonal:hover  {
-  background-color: #0c333d;
+  background-color: var(--background-nav-background-color-hover);
 }
 
 .noData {
@@ -159,9 +160,9 @@
   position: fixed;
   z-index: 2;
   font-weight: bold;
-  border: solid 1px #fff;
+  border: solid 1px var(--border-color);
   background-color: var(--background-color-card);
-  color: #08242c;
+  color: var(--text-color-primary);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   padding: 12px;
   font-size: 1.2em;
@@ -175,7 +176,7 @@
   padding: 10px;
   border-radius: 0;
   background-color: var(--background-color-card);
-  color: #061b20;
+  color: var(--text-color-primary);
   font-size: 1em;
 }
 
