--- a/src/pages/nodes/nodes.module.css
+++ b/src/pages/nodes/nodes.module.css
@@ -3,6 +3,7 @@
   height: calc(100vh - 55px);
   width: 100%;
   position: relative;
+  background-color: var(--background-color-2);
 }
 
 .fadeIn {
